Fix refill where zero-size items are involved

881091b5c0f1d2ead2b70e54f7ac2e4c17680b4e was incorrect since it meant
that any items following zero-sized delegates would not be deleted as
they scrolled up past the top of the view.

refill() should be deleting these items as well as any zero-sized items
before them.

Task-number: QTBUG-22014
Change-Id: I10cd30bb85a8ec1ddaa2a1cbaa924192536ef6fc
Reviewed-by: Martin Jones <martin.jones@nokia.com>